examples/01-basic-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: k8s-study
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
